# vik

./: .vimrc  LICENSE  setup.cfg
.github/workflows/: publish-pypi.yml
vik/: .vimrc  vik.py
