[metadata]
name = vik
version = 1.0.0a1
author = SweetBubaleXXX
description = VIm Kek configuration for Vim
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    gnukek-cli

[options.entry_points]
console_scripts =
    vik = vik.vik:main

[options.package_data]
vik.vik =
    .vimrc
